--- a/MyPortfolio/MyPortfolio/Base.lproj/LaunchScreen.storyboard
+++ b/MyPortfolio/MyPortfolio/Base.lproj/LaunchScreen.storyboard
@@ -18,24 +18,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Portfolio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na1-s8-ch4">
-                                <rect key="frame" x="43.5" y="302" width="288.5" height="63.5"/>
-                                <fontDescription key="fontDescription" name="Optima-Bold" family="Optima" pointSize="53"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developed By Ahmed Elbasha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BTe-zr-KkW">
                                 <rect key="frame" x="77" y="627" width="221.5" height="20"/>
                                 <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="okE-CF-vUF">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ApplicationTitle" translatesAutoresizingMaskIntoConstraints="NO" id="6tj-XV-CWb">
+                                <rect key="frame" x="67.5" y="269.5" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="bh5-aM-dbB"/>
+                                    <constraint firstAttribute="width" constant="240" id="qAJ-fd-1Dk"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.098631031811237335" green="0.078336961567401886" blue="0.38028082251548767" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="6tj-XV-CWb" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2g2-bL-l2S"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BTe-zr-KkW" secondAttribute="bottom" constant="20" id="5ja-jz-EKn"/>
-                            <constraint firstItem="Na1-s8-ch4" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Xn4-vP-Jfz"/>
-                            <constraint firstItem="Na1-s8-ch4" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ZM5-q5-5Rg"/>
+                            <constraint firstItem="okE-CF-vUF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9wm-XC-VLy"/>
+                            <constraint firstItem="okE-CF-vUF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Uvi-JO-Nnz"/>
+                            <constraint firstItem="6tj-XV-CWb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ZS8-jc-OGA"/>
+                            <constraint firstItem="okE-CF-vUF" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="kuf-vC-GK6"/>
+                            <constraint firstItem="okE-CF-vUF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="rgM-Ie-L9w"/>
                             <constraint firstItem="BTe-zr-KkW" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="zqQ-Dg-0rJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -43,7 +51,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ApplicationTitle" width="816" height="170"/>
+        <image name="background" width="792" height="594"/>
+    </resources>
 </document>
