--- a/MyPortfolio/MyPortfolio/Base.lproj/Main.storyboard
+++ b/MyPortfolio/MyPortfolio/Base.lproj/Main.storyboard
@@ -18,37 +18,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="epp-kx-xXi">
-                                <rect key="frame" x="0.0" y="20" width="375" height="45"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="4UD-al-XeD">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E08-RL-gCx">
+                                <rect key="frame" x="0.0" y="20" width="375" height="47"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Portfolio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wpe-AS-zIn">
-                                        <rect key="frame" x="130.5" y="10" width="114.5" height="25"/>
-                                        <fontDescription key="fontDescription" name="Optima-Bold" family="Optima" pointSize="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Me" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCK-yw-3fV">
+                                        <rect key="frame" x="135.5" y="9" width="104.5" height="29"/>
+                                        <fontDescription key="fontDescription" name="Optima-BoldItalic" family="Optima" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.098631031811237335" green="0.078336961567401886" blue="0.38028082251548767" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="DpN-Ma-QuR"/>
-                                    <constraint firstItem="wpe-AS-zIn" firstAttribute="centerY" secondItem="epp-kx-xXi" secondAttribute="centerY" id="v95-jC-nlq"/>
-                                    <constraint firstItem="wpe-AS-zIn" firstAttribute="centerX" secondItem="epp-kx-xXi" secondAttribute="centerX" id="yot-6Q-1c8"/>
+                                    <constraint firstItem="KCK-yw-3fV" firstAttribute="centerX" secondItem="E08-RL-gCx" secondAttribute="centerX" id="9ET-ov-47Z"/>
+                                    <constraint firstItem="KCK-yw-3fV" firstAttribute="centerY" secondItem="E08-RL-gCx" secondAttribute="centerY" id="hLu-gb-otP"/>
+                                    <constraint firstAttribute="height" constant="47" id="rdm-Vt-HkZ"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MhD-yc-0pu">
-                                <rect key="frame" x="0.0" y="65" width="375" height="553"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ekk-RU-SWc">
+                                <rect key="frame" x="0.0" y="67" width="375" height="551"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0kc-bR-dpm">
+                                        <rect key="frame" x="16" y="16" width="343" height="519"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" name="OriyaSangamMN" family="Oriya Sangam MN" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="0kc-bR-dpm" secondAttribute="bottom" constant="16" id="635-RT-qdB"/>
+                                    <constraint firstAttribute="trailing" secondItem="0kc-bR-dpm" secondAttribute="trailing" constant="16" id="F6Q-VC-5iQ"/>
+                                    <constraint firstItem="0kc-bR-dpm" firstAttribute="top" secondItem="ekk-RU-SWc" secondAttribute="top" constant="16" id="M9p-rK-H7o"/>
+                                    <constraint firstItem="0kc-bR-dpm" firstAttribute="leading" secondItem="ekk-RU-SWc" secondAttribute="leading" constant="16" id="bSK-AS-g5l"/>
+                                </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.098631031811237335" green="0.078336961567401886" blue="0.38028082251548767" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="MhD-yc-0pu" firstAttribute="leading" secondItem="dQF-WH-jSQ" secondAttribute="leading" id="CoQ-ta-xMA"/>
-                            <constraint firstItem="epp-kx-xXi" firstAttribute="leading" secondItem="dQF-WH-jSQ" secondAttribute="leading" id="FmM-j9-fM2"/>
-                            <constraint firstItem="epp-kx-xXi" firstAttribute="trailing" secondItem="dQF-WH-jSQ" secondAttribute="trailing" id="MVm-nv-NPz"/>
-                            <constraint firstItem="MhD-yc-0pu" firstAttribute="top" secondItem="epp-kx-xXi" secondAttribute="bottom" id="a4c-sR-xOl"/>
-                            <constraint firstItem="MhD-yc-0pu" firstAttribute="trailing" secondItem="dQF-WH-jSQ" secondAttribute="trailing" id="dts-OV-39F"/>
-                            <constraint firstItem="MhD-yc-0pu" firstAttribute="bottom" secondItem="dQF-WH-jSQ" secondAttribute="bottom" id="gag-MT-Wiu"/>
-                            <constraint firstItem="epp-kx-xXi" firstAttribute="top" secondItem="dQF-WH-jSQ" secondAttribute="top" id="gmO-CQ-SSi"/>
+                            <constraint firstItem="E08-RL-gCx" firstAttribute="leading" secondItem="dQF-WH-jSQ" secondAttribute="leading" id="8kl-PN-bQ7"/>
+                            <constraint firstItem="E08-RL-gCx" firstAttribute="top" secondItem="dQF-WH-jSQ" secondAttribute="top" id="HQz-Ff-6so"/>
+                            <constraint firstItem="ekk-RU-SWc" firstAttribute="bottom" secondItem="dQF-WH-jSQ" secondAttribute="bottom" id="Hv5-ol-1nc"/>
+                            <constraint firstItem="E08-RL-gCx" firstAttribute="trailing" secondItem="dQF-WH-jSQ" secondAttribute="trailing" id="RxN-yQ-DkX"/>
+                            <constraint firstItem="ekk-RU-SWc" firstAttribute="trailing" secondItem="dQF-WH-jSQ" secondAttribute="trailing" id="TSJ-Iv-Npv"/>
+                            <constraint firstItem="4UD-al-XeD" firstAttribute="top" secondItem="f7I-yZ-kEu" secondAttribute="top" id="Viz-81-ry1"/>
+                            <constraint firstItem="4UD-al-XeD" firstAttribute="trailing" secondItem="dQF-WH-jSQ" secondAttribute="trailing" id="YnJ-UN-FO3"/>
+                            <constraint firstItem="4UD-al-XeD" firstAttribute="bottom" secondItem="dQF-WH-jSQ" secondAttribute="bottom" id="bvR-gz-mIU"/>
+                            <constraint firstItem="ekk-RU-SWc" firstAttribute="leading" secondItem="dQF-WH-jSQ" secondAttribute="leading" id="gP2-ap-09N"/>
+                            <constraint firstItem="ekk-RU-SWc" firstAttribute="top" secondItem="E08-RL-gCx" secondAttribute="bottom" id="sSC-M7-MUM"/>
+                            <constraint firstItem="4UD-al-XeD" firstAttribute="leading" secondItem="dQF-WH-jSQ" secondAttribute="leading" id="y5A-N2-5XB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dQF-WH-jSQ"/>
                     </view>
@@ -112,8 +134,8 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="74N-0u-DB7">
                                                             <rect key="frame" x="0.0" y="140" width="132" height="43"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Iu-Dr-m7J">
-                                                                    <rect key="frame" x="8" y="11" width="80.5" height="21"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Project Type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Iu-Dr-m7J">
+                                                                    <rect key="frame" x="8" y="11" width="96" height="21"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
